# OmniMotion

./: CMakeLists.txt  README.md
cmake/: omnimotion-config.cmake.in
docs/: api_reference.md  control_algorithms.md  examples.md  getting_started.md  gimbal_guide.md  motion_planning.md  motor_drivers.md  porting_guide.md  stm32_manual.md  user_guide.md
examples/: CMakeLists.txt
examples/bldc_foc/: main.cpp
examples/dc_motor_l298n/: main.cpp
examples/multi_axis_sync/: main.cpp
examples/real_project/DC_Motor_L298N/: .mxproject  CMakeLists.txt  DC_Motor_L298N.ioc  STM32F103XX_FLASH.ld
examples/real_project/DC_Motor_L298N/Core/Inc/: app.h  main.h
examples/real_project/DC_Motor_L298N/Core/Src/: app.cpp  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
examples/real_project/DC_Motor_L298N/cmake/: gcc-arm-none-eabi.cmake
examples/stepper_scurve/: main.cpp
examples/teach_playback/: main.cpp
examples/trajectory_tracking/: main.cpp
include/omni/: omnimotion.hpp
include/omni/app/: app.hpp  homing_manager.hpp  motor_controller.hpp  multi_axis_controller.hpp  safety_monitor.hpp  teach_recorder.hpp  trajectory_tracker.hpp  vibration_suppressor.hpp
include/omni/control/: adaptive_controller.hpp  cascade_pid.hpp  control.hpp  disturbance_observer.hpp  feedforward.hpp  filters.hpp  mpc_controller.hpp  pid_controller.hpp  sliding_mode.hpp
include/omni/driver/: bldc_driver.hpp  custom_driver.hpp  dc_motor_driver.hpp  driver.hpp  linear_driver.hpp  motor_driver.hpp  servo_driver.hpp  stepper_driver.hpp  types.hpp  vcm_driver.hpp
include/omni/hal/: adc.hpp  comm.hpp  encoder.hpp  gpio.hpp  hal.hpp  pwm.hpp  timer.hpp  types.hpp
include/omni/motion/: motion.hpp  multi_axis_trajectory.hpp  online_planner.hpp  polynomial_trajectory.hpp  scurve_profile.hpp  spline_trajectory.hpp  trajectory.hpp  trapezoidal_profile.hpp
include/omni/protocol/: can_protocol.hpp  foc_controller.hpp  mit_protocol.hpp  modbus_protocol.hpp  protocol.hpp
include/omni/utils/: logger.hpp  math_utils.hpp  ring_buffer.hpp  timer.hpp  utils.hpp
platform/arduino/: README.md  arduino_adc.hpp  arduino_comm.hpp  arduino_encoder.hpp  arduino_gpio.hpp  arduino_hal.hpp  arduino_pwm.hpp  arduino_timer.hpp
platform/stm32/: README.md  stm32_adc.hpp  stm32_can.hpp  stm32_encoder.hpp  stm32_gpio.hpp  stm32_hal.hpp  stm32_pwm.hpp  stm32_pwm3phase.hpp  stm32_timer.hpp
src/: bldc_driver.cpp  dc_motor_driver.cpp  dummy.cpp  linear_driver.cpp  servo_driver.cpp  stepper_driver.cpp  vcm_driver.cpp
tests/: CMakeLists.txt  test_filters.cpp  test_motor_state.cpp  test_pid_controller.cpp  test_scurve_profile.cpp  test_trapezoidal_profile.cpp
